Fix form label spacing
verified on mobile

--- a/src/components/app/Profile/profile.scss
+++ b/src/components/app/Profile/profile.scss
@@ -152,6 +152,7 @@
 .form-label {
   margin-top: 10px;
   font-weight: 600;
+  margin-bottom: 2px;
 }
 
 .form-check-input {
